external-crates/move/crates/move-compiler/tests/move_check/parser/byte_string_token_eof2.move
module 0x42::M {
    public fun bad_value(): vector<u8> {
        b"Diem
    }
}
